syntax = "proto3";

package com.example.grpc;
import "google/protobuf/empty.proto";

message PersonCreateRequest {
  string username = 1;
  int32 age = 2;
  string email = 3;
  string password = 4;
}

message PersonResponse {
  int64 id = 1;
  string username = 2;
  int32 age = 3;
  string email = 4;
  string password = 5;
}

message PersonUpdateRequest {
  int64 id = 1;
  string username = 2;
  int32 age = 3;
  string email = 4;
  string password = 5;
}

message PersonIdRequest {
  int64 id = 1;
}

service PersonService {
  rpc create(PersonCreateRequest) returns (PersonResponse) {}

  rpc update(PersonUpdateRequest) returns (PersonResponse) {}

  rpc delete(PersonIdRequest) returns (google.protobuf.Empty) {}

  rpc getById(PersonIdRequest) returns (PersonResponse) {}

  rpc getAll(google.protobuf.Empty) returns (stream PersonResponse) {}
}